# YOLOv5-with-Raspberry-Pi

./: CMakeLists.txt
include/: autopilot.h
src/: capture.cpp  main.cpp  yolo.cpp
